fixed modal paragraph size and spacing betwenen skills section

--- a/assets/css/custom.css
+++ b/assets/css/custom.css
@@ -10,3 +10,7 @@
 .footer-text-line {
   opacity: 0.7;
 }
+
+.modal p {
+  font-size: 0.9em;
+}
